# test_project

./: .flake8  .pre-commit-config.yaml  README.md  coderpad_pytest_install.sh  complexity_cheat_sheet.md  logging_config.py  pyproject.toml  shortcuts.py  test.py
src/: count_patterns.py  jump_game.py  maximum_subarray.py  next_permutation.py  product_array_except_self.py  reverse_integer.py  simplified_path.py  test_module.py  two_sum.py
src/exercises/: count_patterns.py  jump_game.py  max_subarray2.py  next_perm_2.py  reverse_integer.py  sql_orm_performance.py  valid_sudoku.py
src/util/: dockersuperclean.sh
